--- a/src/component/content/content.module.css
+++ b/src/component/content/content.module.css
@@ -31,3 +31,40 @@
     width: 60px;
     margin-top: -15px;
 }
+
+.b5 {
+    width: 100%;
+}
+
+.greenContent {
+    color: #589943;
+    padding: 0 0 0 10px;
+    display: inline;
+}
+
+
+@media (max-width: 768px) {
+
+
+    .obzac {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        grid-gap: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .obzacText {
+        font-size: 18px;
+        color: rgb(31, 31, 31);
+        text-align: left;
+    }
+    
+    .images {
+        height: 30px;
+        width: 30px;
+        margin-top: -5px;
+    }
+}
