--- a/src/component/timer/timer.module.css
+++ b/src/component/timer/timer.module.css
@@ -4,15 +4,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 60px;
+    padding: 80px;
 }
 
 .timerText {
     padding: 20px;
-    font-size: 54px;
+    font-size: 34px;
     border: 5px solid red;
     border-radius: 30px;
     color: red;
     font-family: Arial, Helvetica, sans-serif;
     transform: rotate(-4deg);
+}
+
+@media (max-width: 768px) {
+
+    .timerText {
+        font-size: 18px;
+        border: 3px solid red;
+    }
+
+    .timerBlock {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 40px;
+    }
 }
