--- a/src/container/main/main.module.css
+++ b/src/container/main/main.module.css
@@ -1,6 +1,7 @@
 .main {
     padding-top: 150px;
     width: 100%;
+    max-width: 1940px;
     height: auto;
     min-height: 100vh;
     background-color: rgb(245, 245, 245);
