--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   justify-content: flex-start;
 }
 
+#root {
+  background-color: #569a43;
+}
+
+p {
+  color: #fff;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -42,7 +50,7 @@
 }
 
 html {
-  background-color: rgb(245, 245, 245);
+  background-color: #569a43;
 }
 
 
