--- a/src/component/slider/slider.module.css
+++ b/src/component/slider/slider.module.css
@@ -1,22 +1,23 @@
 /* App.css */
 .swiper-container {
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 
 .slide {
     height: auto !important;
-    height: 100%;
+    /* height: 300px !important; */
     text-align: center;
     font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #569a43;
 }
 
 .sliderImg {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 500px;
 }
 
 .prevArrow {
@@ -75,6 +76,11 @@ transition: .3s;
 @media (max-width: 768px) {
 
     .slide {
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    .sliderImg {
         width: 100% !important;
         height: auto !important;
     }
