--- a/src/component/timer/timer.module.css
+++ b/src/component/timer/timer.module.css
@@ -7,23 +7,60 @@
     padding: 80px;
 }
 
-.timerText {
-    padding: 20px;
-    font-size: 34px;
-    border: 5px solid red;
-    border-radius: 30px;
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    transform: rotate(-4deg);
+.timer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+.timerEl {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.leftText {
+    font-size: 30px;
+    color: white;
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
+
+.timerValues {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 280px;
+    grid-gap: 5px;
+    color: aliceblue;
+    margin-top: -15px;
+}
+
+.value {
+    font-size: 45px;
+    color: white;
+    font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.valueWord {
+    font-size: 15px;
+    color: rgb(194, 194, 194);
+    font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+
+
 @media (max-width: 768px) {
-
-    .timerText {
-        font-size: 18px;
-        border: 3px solid red;
-    }
-
     .timerBlock {
         width: 100%;
         height: auto;
