--- a/src/container/footer/footer.module.css
+++ b/src/container/footer/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 100px;
-    background-color: #589943;
+    background-color: #559b46;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 1940px;
     height: 100px;
-    background-color: #589943;
+    background-color: #559b46;
     display: flex;
     align-items: center;
     justify-content: center;
