--- a/src/container/main/main.module.css
+++ b/src/container/main/main.module.css
@@ -4,5 +4,5 @@
     max-width: 1940px;
     height: auto;
     min-height: 100vh;
-    background-color: rgb(245, 245, 245);
+    background-color: #569a43;
 }
